--- a/data_scraper/public/settings/files/files.css
+++ b/data_scraper/public/settings/files/files.css
@@ -139,6 +139,9 @@ h1{
   border-radius: 12px;
   padding: 12px;
   box-shadow: 0 8px 18px rgba(0,0,0,.25);
+  overflow: auto;
+  max-height: 42vh;
+  padding-left: 1.5em;
 }
 
 /* Nice scrollbars (WebKit) */
